--- a/companyproj/compapp/templates/employee_list.html
+++ b/companyproj/compapp/templates/employee_list.html
@@ -24,5 +24,7 @@
             <li>No employees found.</li>
         {% endfor %}
     </ul>
+    <a href="{% url 'add_employee' %}">Add New Employee</a> |
+    <a href="{% url 'add_project' %}">Add New Project</a>
 </body>
 </html>
